force-app/main/default/objects/Recommendation_Item__c/Recommendation_Item__c.object-meta.xml
<CustomObject>
    <label>Recommendation Item</label>
    <nameField>
        <displayFormat>RCI-{0000000}</displayFormat>
        <label>Recommendation Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>