force-app/main/default/objects/Recommendation_Item__c/fields/LegacyCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedBy__c</fullName>
    <label>Legacy Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>