force-app/main/default/objects/Recommendation_Item__c/fields/Recommendation_Log__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Log__c</fullName>
    <label>Recommendation Log</label>
    <referenceTo>Recommendation_Log__c</referenceTo>
    <relationshipLabel>Recommendation Item</relationshipLabel>
    <relationshipName>Recommendation_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>