force-app/main/default/objects/Recommendation_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Formal Assessment</fullName>
            </value>
            <value>
                <fullName>Under Quality Review</fullName>
            </value>
            <value>
                <fullName>Delegate&apos;s Decision</fullName>
            </value>
            <value>
                <fullName>AAT Review</fullName>
            </value>
            <value>
                <fullName>Finalise</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>ReconsiderationOutcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>